tests/org.eclipse.php.core.tests/workspace/errors/php71/invalidConstantExpression1.pdtt
--TEST--
Allow tenary as constant expression
--FILE--
<?php
function foo($a = Exception::class == 'something' ? true : $c) {}
?>
--EXPECT--
[line=2, start=65, end=67] Constant expression contains invalid operations
